# mini-projects

./: .gitignore  README.md  pyproject.toml  requirements.txt
birthday_analyzer/code/: README.md  display_dates.py  example.py  load_data.py
birthday_analyzer/data/: birthday_data.csv
iitm_courses_crawler_data/: course_data_fetch.ipynb  courses_data.json  soup_prettify_output_course.txt  soup_prettify_output_main_link.txt
search_engine/: task1_fetch_links.py  task2_crawler.py  task3_crawler_sql.py  task4_pagerank_manual.py  task4_pagerank_networkx.py
word-chain/: chain_game.py  word_game.py
