[project]
name = "mini-projects"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "ruff>=0.15.20",
]
